[tool.poetry]
name = "twitter-pagerank"
version = "0.1.0"
description = "Twitter PageRank Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
networkx = "^3.4.2"
numpy = "^2.2.2"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.11.0"
python-louvain = "^0.16"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
